--- a/index.html
+++ b/index.html
@@ -1,229 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <title>Waterbug</title>
-
-    <!-- META TAGS -->
-    <meta name="description" content="TKTK">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<link rel="shortcut icon" href="http://media.npr.org/favicon.ico" />
-
-    <!-- CHARTBEAT -->
-    <script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
-
-    <!-- FONTS -->
-    <!-- Fonts -->
-<script src="js/webfont.js"></script>
-<script>
-    var urls = [
-        'http://s.npr.org/templates/css/fonts/GothamSSm.css',
-        'http://s.npr.org/templates/css/fonts/Gotham.css',
-        'http://s.npr.org/templates/css/fonts/Knockout.css'
-    ];
-
-    if (window.location.protocol == "https:") {
-        urls = [
-            'https://secure.npr.org/templates/css/fonts/GothamSSm.css',
-            'https://secure.npr.org/templates/css/fonts/Gotham.css',
-            'https://secure.npr.org/templates/css/fonts/Knockout.css'
-        ];
-    }
-
-    WebFont.load({
-         custom: {
-             families: [
-                 'Gotham SSm:n4,n7',
-                 'Gotham:n4,n7',
-                 'Knockout 31 4r:n4'
-             ],
-             urls: urls
-         },
-         timeout: 10000
-    });
-</script>
-
-    <!-- CSS -->
-
-
-    <link rel="stylesheet" type="text/css" href="css/app.css" />
-
-
-<meta name="twitter:card" content="summary">
-<meta name="twitter:site" content="@nprviz">
-<meta name="twitter:image" content="http://TKTK" />
-
-
-<meta property="og:title" content="TKTK" />
-<meta property="og:url" content="http://TKTK" />
-<meta property="og:type" content="article" />
-<meta property="og:description" content="TKTK" />
-<meta property="og:image" content="http://TKTK" />
-<meta property="og:site_name" content="NPR.org" />
-<meta property="fb:app_id" content="138837436154588" />
-
-
-<meta name="thumbnail" content="http://TKTK" />
-
-
-
-</head>
-<body>
-    <a class="sr-only" href="#content">Skip To Content</a>
-
-
-
-
-<header>
-    <div class="header-wrapper">
-        <h1>Waterbug</h1>
-        <a class="toolkit-link" href="http://tools.apps.npr.org">
-            <span class="logo"><img src="http://media.npr.org/chrome/news/nprlogo_138x46.gif" alt="NPR" /></span>
-            Newsroom Toolkit
-        </a>
-    </div>
-</header>
-
-
-    <section id="content">
-        <div class="container-fluid">
-
-<div class="wrapper">
-    <div class="canvas-wrapper">
-        <div class="canvas-cell">
-            <canvas id="imageCanvas"></canvas>
-            <p class="drag-help">Click and drag the image to adjust the crop.</p>
-        </div>
-    </div>
-    <div class="editor">
-        <form autocomplete="off">
-            <div class="form-group">
-                <label class="control-label">Image</label>
-                <div class="fileinput fileinput-new input-group" data-provides="fileinput">
-                    <div class="form-control" data-trigger="fileinput"><i class="fa fa-file fileinput-exists"></i> <span class="fileinput-filename"></span></div>
-                    <span class="input-group-addon btn btn-default btn-file"><span class="fileinput-new">Select file</span><span class="fileinput-exists">Change</span><input type="file" id="imageLoader" name="imageLoader"></span>
-                    <a href="#" class="input-group-addon btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <h6 class="control-label">Copyright Holder <span class="required is-visible">(Required)</span></h6>
-
-                <select class="copyright-holder form-control">
-                  <option></option>
-                  <option value="npr">NPR</option>
-                  <option value="freelance">Freelance</option>
-                  <option value="wire">Wires</option>
-                  <option value="third-party">Third-Party/Courtesy</option>
-                </select>
-            </div>
-
-            <div class="form-group" style="display: none;">
-                <label class="control-label">Photographer <span class="required">(Required)</span></label>
-                <input type="text" class="form-control" id="photographer" name="photographer">
-            </div>
-
-            <div class="form-group" style="display: none;">
-                <label class="control-label">Source <span class="required">(Required)</span></label>
-                <input type="text" class="form-control" id="source" name="source">
-            </div>
-
-            <div class="row">
-                <div class="form-group col-lg-6">
-                    <h6 class="control-label">Crop</h6>
-                    <div class="btn-group btn-group-justified btn-group-sm" data-toggle="buttons">
-                      <label class="btn btn-primary active">
-                        <input type="radio" name="crop" id="original" value="original" checked>
-                        Original
-                      </label>
-                      <label class="btn btn-primary">
-                        <input type="radio" name="crop" id="twitter" value="twitter">
-                        16x9 <i class="fa fa-twitter"></i>
-                      </label>
-                    </div>
-                </div>
-
-                <div class="form-group col-lg-6">
-                    <h6 class="control-label">Logo</h6>
-
-                    <div class="btn-group btn-group-justified btn-group-sm" data-toggle="buttons">
-                      <label class="btn btn-primary active">
-                        <input type="radio" name="logo" id="npr" value="npr" checked>
-                        NPR
-                      </label>
-                      <label class="btn btn-primary">
-                        <input type="radio" name="logo" id="music" value="music">
-                        NPR Music
-                      </label>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="form-group col-lg-6 col-lg-push-6">
-                    <h6 class="control-label">Logo Color</h6>
-                    <div class="btn-group btn-group-justified btn-group-sm" data-toggle="buttons">
-                      <label class="btn btn-primary active">
-                        <input type="radio" name="logoColor" id="whiteLogo" value="white" checked>
-                        White
-                      </label>
-                      <label class="btn btn-primary">
-                        <input type="radio" name="logoColor" id="blackLogo" value="black">
-                        Black
-                      </label>
-                    </div>
-                </div>
-                <div class="form-group col-lg-6 col-lg-pull-6">
-                    <h6 class="control-label">Text Color</h6>
-                    <div class="btn-group btn-group-justified btn-group-sm" data-toggle="buttons">
-                      <label class="btn btn-primary active">
-                        <input type="radio" name="textColor" id="whiteText" value="white" checked>
-                        White
-                      </label>
-                      <label class="btn btn-primary">
-                        <input type="radio" name="textColor" id="blackText" value="black">
-                        Black
-                      </label>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <h6 class="check-header">Sharing Guidelines</h6>
-                <ul class="guidelines">
-                    <li>Only official NPR accounts can tweet wire images (Getty/AP)</li>
-                    <li>Only tweet AP photos that published with the story and we must include the story link</li>
-                    <li>We can tweet multiple Getty photos as long as they’re licensed and have been downloaded</li>
-                    <li>We can’t tweet Corbis or Landov images</li>
-                    <li>NPR, freelancer, third party/courtesy photos, PR, Flickr Creative Commons and public domain images are fine to share, just include correct attribution</li>
-                </ul>
-            </div>
-
-            <div class="form-group">
-                <button class="btn btn-primary btn-lg btn-block save-btn" download="download.png" disabled>Save</button>
-            </div>
-
-            <p class="sample-credit">Sample image: <a href="https://www.flickr.com/photos/albaraa/7837157812/in/photolist-cWxtYy-fd7sCV-jXK9kw-h2uume-6Vvw1D-9y9KuU-aaTrae-aND34a-7vCfq5-7Fihq9-gCVuVC-4EfCSF-nxVJGT-h2u4Fm-6Rqu9g-aE44a1-dgNZb2-czXySQ-4TF4Mv-8sCrCz-6RHSzX-h2uH1m-6nNG28-aGCMUM-3cgGWd-fd7sZ8-bT696M-h2uH7q-h2roVm-4DxZuy-d254yU-fmVVxa-73Pjgh-fdmK2C-hRzCmf-6Rux4S-phyN4p-p15nDN-arGkAi-85AGFh-d254os-7qjsgt-nQqsTR-fd7vPF-e91zyU-6nnyJr-pK8vLC-pK5kbJ-7qomAQ-8B1prK">Belal Khan/Flickr</a></p>
-        </form>
-    </div>
-</div>
-
-
-
-        </div>
-    </section>
-
-<script type="text/javascript">
-    window.$ = window.jQuery = require('./js/jquery.js');
-</script>
-<script type="text/javascript" src="js/underscore.js"></script>
-<script type="text/javascript" src="js/modernizr.js"></script>
-<script type="text/javascript" src="js/bootstrap.js"></script>
-<script type="text/javascript" src="js/fileinput.js"></script>
-<script type="text/javascript" src="js/app_config.js"></script>
-<script type="text/javascript" src="js/app.js"></script>
-
-
-
-</body>
+<html>
+  <head>
+    <title>Hello World!</title>
+  </head>
+  <body>
+    <h1>Hello World!</h1>
+    <a href="factlist/index.html">Factlist</a>
+    <a href="quotable/index.html">Quotabke</a>
+    <a href="watermarker/index.html">Watermarker</a>
+  </body>
 </html>
