--- a/watermarker/index.html
+++ b/watermarker/index.html
@@ -79,7 +79,7 @@
 <header>
     <div class="header-wrapper">
         <h1>Waterbug</h1>
-        <a class="toolkit-link" href="http://tools.apps.npr.org">
+        <a class="toolkit-link" href="../index.html">
             <span class="logo"><img src="http://media.npr.org/chrome/news/nprlogo_138x46.gif" alt="NPR" /></span>
             Newsroom Toolkit
         </a>
